# fireline

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/fireline-acp-ids/: Cargo.toml
crates/fireline-acp-ids/src/: lib.rs
crates/fireline-components/: Cargo.toml
crates/fireline-components/src/: approval.rs  attach_tool.rs  audit.rs  budget.rs  context.rs  fs_backend.rs  lib.rs  smithery.rs  tools.rs
crates/fireline-components/src/peer/: directory.rs  mcp_server.rs  mod.rs  transport.rs
crates/fireline-components/src/sandbox/: microsandbox.rs  mod.rs
crates/fireline-conductor/: Cargo.toml
crates/fireline-conductor/src/: build.rs  lib.rs  lineage.rs  session.rs  shared_terminal.rs  state_projector.rs  topology.rs  trace.rs
crates/fireline-conductor/src/primitives/: host.rs  mod.rs  sandbox.rs
crates/fireline-conductor/src/runtime/: docker.rs  local.rs  manager.rs  mod.rs  mounter.rs  provider.rs  registry.rs
crates/fireline-conductor/src/transports/: duplex.rs  mod.rs  stdio.rs  websocket.rs
crates/fireline-control-plane/: Cargo.toml
crates/fireline-control-plane/src/: auth.rs  heartbeat.rs  local_provider.rs  main.rs  router.rs
crates/fireline-harness/: Cargo.toml
crates/fireline-harness/src/: active_subscriber_task.rs  agent_observability.rs  approval.rs  audit.rs  auto_approve.rs  awakeable.rs  awakeable_race.rs  awakeable_timeout.rs  budget.rs  context.rs  cwd_mount_rewrite.rs  durable_subscriber.rs  host_topology.rs  lib.rs  peer_routing.rs  resolve_awakeable.rs  routes_acp.rs  runtime_topology.rs  secrets.rs  shared_terminal.rs  state_projector.rs  telegram_subscriber.rs  topology.rs  trace.rs  wake_timer.rs  webhook_subscriber.rs  workflow_context.rs
crates/fireline-host/: Cargo.toml
crates/fireline-host/src/: auth.rs  bootstrap.rs  control_plane.rs  control_plane_client.rs  control_plane_peer_registry.rs  heartbeat.rs  lib.rs  local_provider.rs  observability.rs  router.rs  runtime_host.rs  runtime_provider.rs
crates/fireline-host/src/transports/: duplex.rs  mod.rs  websocket.rs
crates/fireline-orchestration/: Cargo.toml
crates/fireline-orchestration/src/: child_session_edge.rs  lib.rs  load_coordinator.rs  primitive.rs
crates/fireline-peer/: Cargo.toml
crates/fireline-peer/src/: component.rs  directory.rs  lib.rs  lookup.rs  mcp_server.rs  transport.rs
crates/fireline-resources/: Cargo.toml
crates/fireline-resources/src/: fs_backend.rs  index.rs  lib.rs  mounter.rs  publisher.rs  registry.rs  resource.rs
crates/fireline-runtime/: Cargo.toml
crates/fireline-runtime/src/: agent_catalog.rs  bootstrap.rs  build.rs  child_session_edge.rs  connections.rs  control_plane_client.rs  control_plane_peer_registry.rs  lib.rs  load_coordinator.rs  routes_acp.rs  runtime_host.rs  runtime_index.rs  runtime_provider.rs  shared_terminal.rs  state_projector.rs  topology.rs  trace.rs
crates/fireline-runtime/src/runtime/: local.rs  manager.rs  mod.rs  mounter.rs  provider.rs
crates/fireline-runtime/src/transports/: duplex.rs  mod.rs  websocket.rs
crates/fireline-sandbox/: Cargo.toml
crates/fireline-sandbox/src/: dispatcher.rs  lib.rs  manager.rs  microsandbox.rs  primitive.rs  provider.rs  provider_dispatcher.rs  provider_model.rs  provider_trait.rs  registry.rs  satisfiers.rs  stream_trace.rs
crates/fireline-sandbox/src/providers/: anthropic.rs  docker.rs  local.rs  local_subprocess.rs  mod.rs
crates/fireline-semantics/: Cargo.toml
crates/fireline-semantics/src/: conductor.rs  ids.rs  lib.rs
crates/fireline-session/: Cargo.toml
crates/fireline-session/src/: active_turn_index.rs  host_identity.rs  host_index.rs  lib.rs  projection.rs  runtime_identity.rs  runtime_index.rs  session_index.rs  spec.rs  state_materializer.rs  stream_host.rs
crates/fireline-tools/: Cargo.toml
crates/fireline-tools/src/: agent_catalog.rs  attach.rs  lib.rs  smithery.rs
crates/fireline-tools/src/peer/: directory.rs  lookup.rs  mcp_server.rs  mod.rs  stream.rs  transport.rs
docker/: README.md  fireline-host-quickstart.Dockerfile  fireline-host.Dockerfile  fireline-runtime.Dockerfile  fireline-streams.Dockerfile
docs/: DEMO-PLAN.md  PITCH.md  PRODUCT.md  architecture.md  demo-runbook.md  demo-walkthrough.md  durable-agent-fabric.md  fireline-one-pager.md  gaps-declarative-agent-api.md  gaps-platform-sdk.md  handoff-2026-04-11-managed-agent-suite.md  handoff-2026-04-11-post-debt-paydown.md  handoff-2026-04-11-stream-as-truth-and-runtime-abstraction.md  index.md  packages.md  programmable-topology-exploration.md  ts-client-api-design.md
examples/: anthropic-provider.ts  package.json  tsconfig.base.json  tsconfig.json
scripts/: demo-handoff.sh  durable-subscriber-phase-8-rg-gate.sh  fireline-cli-target-matrix.mjs  phase-8-extended-rg-gate.sh  pre-demo-check.mjs  stage-fireline-platform-package.mjs
src/: active_turn_index.rs  agent_catalog.rs  bootstrap.rs  child_session_edge.rs  connections.rs  control_plane_client.rs  control_plane_peer_registry.rs  error_codes.rs  lib.rs  load_coordinator.rs  main.rs  orchestration.rs  runtime_host.rs  runtime_index.rs  runtime_materializer.rs  runtime_provider.rs  runtime_registry.rs  session_index.rs  stream_host.rs  topology.rs  webhook.rs
tests/: acp_stdio_roundtrip.rs  awakeable_basic.rs  awakeable_race.rs  awakeable_replay.rs  awakeable_resolve.rs  awakeable_timeout.rs  control_plane_auth.rs  control_plane_docker.rs  control_plane_push.rs  ctx_awakeable_e2e.rs  ds_dp_composite.rs  durable_promises_replay_skeleton.rs  durable_subscriber_cross_profile.rs  durable_subscriber_ts_integration.rs  hosted_deploy_always_on.rs  hosted_runtime.rs  managed_agent_harness.rs  managed_agent_orchestration.rs  managed_agent_primitives_e2e.rs  managed_agent_primitives_suite.rs  managed_agent_resources.rs  managed_agent_sandbox.rs  managed_agent_session.rs  (+14 more)
verification/audit/: Cargo.toml  README.md  agent_layer_manifest.toml  build.rs
verification/audit/src/: lib.rs
verification/audit/tests/: forbidden_identifiers.rs  plane_disjointness.rs
(+359 files in other folders)
