[workspace]
members = [
    ".",
    "crates/fireline-semantics",
    "crates/fireline-session",
    "crates/fireline-orchestration",
    "crates/fireline-harness",
    "crates/fireline-host",
    "crates/fireline-sandbox",
    "crates/fireline-resources",
    "crates/fireline-tools",
    "verification/audit",
    "verification/stateright",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fireline/fireline"

[workspace.dependencies]
# Internal workspace crates
fireline-semantics = { path = "crates/fireline-semantics" }
fireline-session = { path = "crates/fireline-session" }
fireline-orchestration = { path = "crates/fireline-orchestration" }
fireline-harness = { path = "crates/fireline-harness" }
fireline-host = { path = "crates/fireline-host" }
fireline-sandbox = { path = "crates/fireline-sandbox" }
fireline-resources = { path = "crates/fireline-resources" }
fireline-tools = { path = "crates/fireline-tools" }

# Async runtime + utility
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = "0.28"
nix = { version = "0.29", features = ["signal", "process"] }
bollard = "0.19.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Filesystem / config
dirs = "6"
toml = "0.8"
tar = "0.4"
walkdir = "2"
url = "2"

# IDs
uuid = { version = "1", features = ["serde", "v4"] }

# Durable streams ecosystem
durable-streams = { git = "https://github.com/durable-streams/durable-streams", package = "durable-streams" }
durable-streams-server = "0.1.3"

# ACP SDK crates (all from one repo, one commit)
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", features = ["unstable_session_usage"] }
sacp = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-core" }
sacp-conductor = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-conductor" }
sacp-tokio = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-tokio" }
yopo = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-yopo" }
agent-client-protocol-test = { git = "https://github.com/agentclientprotocol/rust-sdk", package = "agent-client-protocol-test" }

# ============================================================================
# Top-level binary package
# ============================================================================

[package]
name = "fireline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fireline runtime substrate for ACP-compatible agents"

[features]
default = []
anthropic-provider = ["fireline-host/anthropic-provider", "fireline-sandbox/anthropic-provider"]

[dependencies]
# Workspace crates
fireline-orchestration.workspace = true
fireline-session.workspace = true
fireline-harness.workspace = true
fireline-host.workspace = true
fireline-sandbox.workspace = true
fireline-resources.workspace = true
fireline-tools.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# CLI
clap.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serde (for connection lookup TOML, agent catalog, etc.)
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true

# Reqwest (for the agent catalog client + webhook subscriber)
reqwest.workspace = true

# Filesystem
dirs.workspace = true
tar.workspace = true

# IDs
uuid.workspace = true

# Durable streams (for webhook subscriber + dashboard binary)
durable-streams.workspace = true
durable-streams-server.workspace = true

# ACP SDK (used by bins and future host routes)
agent-client-protocol.workspace = true
agent-client-protocol-test.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-tokio.workspace = true

[dev-dependencies]
yopo.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
agent-client-protocol-test.workspace = true

[[bin]]
name = "fireline"
path = "src/main.rs"

[[bin]]
name = "fireline-dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "fireline-agents"
path = "src/bin/agents.rs"

[[bin]]
name = "fireline-testy"
path = "src/bin/testy.rs"

[[bin]]
name = "fireline-testy-load"
path = "src/bin/testy_load.rs"

[[bin]]
name = "fireline-testy-fs"
path = "src/bin/testy_fs.rs"

[[bin]]
name = "fireline-testy-prompt"
path = "src/bin/testy_prompt.rs"

[[bin]]
name = "fireline-streams"
path = "src/bin/streams.rs"
