[package]
name = "fireline-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prebuilt topology components for Fireline (peer calls, audit, context, approval, budget, smithery bridge)"

[dependencies]
fireline-conductor.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Tracing
tracing.workspace = true

# IDs
uuid.workspace = true

# Filesystem (peer directory file)
dirs.workspace = true
toml.workspace = true

# ACP SDK
agent-client-protocol.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
tokio-tungstenite.workspace = true

# Peer transport
yopo.workspace = true

# Audit tracer sink
durable-streams.workspace = true

# Smithery bridge HTTP client
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
