[package]
name = "fireline-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prebuilt topology components for Fireline (peer calls, audit, context, approval, budget, smithery bridge)"

[dependencies]
fireline-conductor.workspace = true

# Async runtime
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Tracing
tracing.workspace = true

# IDs
uuid.workspace = true

# Filesystem (peer directory file)
dirs.workspace = true
toml.workspace = true

# ACP SDK
agent-client-protocol.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
tokio-tungstenite.workspace = true

# Peer transport
yopo.workspace = true

# Audit tracer sink
durable-streams.workspace = true

# Smithery bridge HTTP client
reqwest.workspace = true

# Optional: the microsandbox-backed Sandbox satisfier. Gated behind the
# `microsandbox-provider` feature because the upstream crate pulls
# keyring → libdbus-sys on Linux (needs system libdbus-1-dev) and
# microsandbox-prebuilt downloads libkrun binaries at build time.
# Neither is available on default GitHub Actions runners, so the
# default build excludes it and CI only compiles the feature when
# explicitly asked.
microsandbox = { version = "0.3.12", optional = true }

[features]
default = []
# Enables the real microVM backend via the `microsandbox` crate —
# requires libdbus-1-dev at build time on Linux, and KVM (Linux) /
# Apple Silicon (macOS) at runtime. Off in CI because neither is
# available on standard GitHub Actions runners. Enable locally with
# `cargo check --features fireline-components/microsandbox-provider`.
microsandbox-provider = ["dep:microsandbox"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
