[package]
name = "fireline-conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP conductor wiring + transport adapters + state-stream observer for Fireline"

[dependencies]
fireline-resources.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true

# Serde (for the state writer's JSON construction)
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dirs.workspace = true
toml.workspace = true
tar.workspace = true
walkdir.workspace = true
url.workspace = true

# Tracing
tracing.workspace = true

# ACP SDK
agent-client-protocol.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-tokio.workspace = true

# Durable streams (the state writer's Producer)
durable-streams.workspace = true

# WebSocket transport adapter (feature-gated to keep stdio-only consumers light)
axum = { workspace = true, optional = true }

[features]
default = ["transport-websocket", "transport-duplex"]

# Each transport is feature-gated so consumers can opt in to what they need.
transport-websocket = ["dep:axum"]
transport-duplex = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
