[package]
name = "fireline-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP control plane for Fireline runtime lifecycle"

[dependencies]
fireline-conductor.workspace = true

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest.workspace = true
