[package]
name = "fireline-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP harness, approval, and effect-capture primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
durable-streams.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
