[package]
name = "fireline-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACP harness, approval, and effect-capture primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
dirs.workspace = true
durable-streams.workspace = true
fireline-acp-ids.workspace = true
fireline-resources.workspace = true
fireline-session.workspace = true
fireline-tools.workspace = true
futures.workspace = true
reqwest.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true
zeroize = "1"
