[package]
name = "fireline-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host process assembly for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
durable-streams.workspace = true
fireline-harness.workspace = true
fireline-orchestration.workspace = true
fireline-resources.workspace = true
fireline-sandbox.workspace = true
fireline-session.workspace = true
fireline-tools.workspace = true
futures.workspace = true
reqwest.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[features]
default = ["transport-websocket", "transport-duplex"]
transport-websocket = []
transport-duplex = []
anthropic-provider = ["fireline-sandbox/anthropic-provider"]
