[package]
name = "fireline-orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Session wake orchestration primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
fireline-runtime.workspace = true
fireline-session.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
