[package]
name = "fireline-peer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-agent peer-call component for Fireline (impl Component<ProxyToConductor>)"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true

# Tracing
tracing.workspace = true

# IDs
uuid.workspace = true

# Filesystem (peer directory file)
dirs.workspace = true
toml.workspace = true

# ACP SDK
sacp.workspace = true

# Peer transport (HTTP today, ACP-native after the spike)
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
