[package]
name = "fireline-peer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-agent peer-call component for Fireline (impl Component<ProxyToConductor>)"

[dependencies]
# Async runtime
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
async-trait.workspace = true

# Serde
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Tracing
tracing.workspace = true

# IDs
uuid.workspace = true

# Filesystem (peer directory file)
dirs.workspace = true
toml.workspace = true

# ACP SDK
agent-client-protocol.workspace = true
sacp.workspace = true
tokio-tungstenite.workspace = true

# Peer transport
yopo.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
