[package]
name = "fireline-resources"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resource mounting and filesystem primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
durable-streams.workspace = true
sacp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
