[package]
name = "fireline-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime manager and provider assembly for Fireline"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bollard.workspace = true
dirs.workspace = true
durable-streams.workspace = true
durable-streams-server.workspace = true
fireline-harness.workspace = true
fireline-resources.workspace = true
fireline-sandbox.workspace = true
fireline-session.workspace = true
fireline-tools.workspace = true
futures.workspace = true
reqwest.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true

[features]
default = ["transport-websocket", "transport-duplex"]
transport-websocket = []
transport-duplex = []
