[package]
name = "fireline-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool execution sandbox primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bollard.workspace = true
dirs.workspace = true
durable-streams.workspace = true
fireline-resources.workspace = true
fireline-session.workspace = true
futures.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
microsandbox = { version = "0.3.12", optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = []
microsandbox-provider = ["dep:microsandbox"]
anthropic-provider = ["dep:reqwest"]
