[package]
name = "fireline-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable-stream-backed session log and replay primitives for Fireline"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
durable-streams.workspace = true
durable-streams-server.workspace = true
fireline-acp-ids.workspace = true
fireline-resources.workspace = true
fireline-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
